--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.2",
+    "ethers": "^5.5.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "react": "^18.2.0",
